--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,5 +1,3 @@
-@import '../../node_modules/modern-normalize/'
+@import '../../node_modules/modern-normalize/modern-normalize.css'
 
-body {
-  background-color: blue; 
-}
+
