--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -1,3 +1,16 @@
-body {
-    background-color: blue;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+:root{
+    --color-bg: #ffffff;
+    --color-text: #323133;
+    --color-primary: #9c3127;
+    --color-secondary: #2d4473;
+    --color-third: #f37575;
+    --color-fourth: #a69580;
 }
