--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -54,6 +54,11 @@
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
   }
 
+.header__link.active::after{
+    content: url(../images/Animergency-picto-copie.svg);
+    display: block;
+}
+
 .nav__header{
     padding-bottom: 36px;
     transform: translateX(0%);
@@ -82,11 +87,11 @@
 
 .nav__el--active{
     border-bottom: 3px var(--color-primary) solid;
-    content: ;
 }
 
 .nav__el--active::after{
     content: url(../images/Animergency-picto-copie.svg);
+    display: block;
 }
 
 .nav__el--inactive{
