--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -86,7 +86,7 @@
 }
 
 .nav__el--active{
-    border-bottom: 3px var(--color-primary) solid;
+    content: url(../images/Animergency-picto-copie.svg);
 }
 
 .nav__el--inactive{
