--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -78,7 +78,7 @@
   margin-top: 18px; }
 
 .nav__el--active {
-  border-bottom: 3px var(--color-primary) solid; }
+  content: url(../images/Animergency-picto-copie.svg); }
 
 .nav__el--inactive {
   border-bottom: 3px var(--color-bg) solid; }
