--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -52,6 +52,7 @@
     background-image: url('../images/Animergency-picto-copie.svg');
     background-size: cover;
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
+    text-decoration: none;
   }
 
 
