--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -48,7 +48,8 @@
   background-image: url("../images/Animergency-picto-copie.svg");
   background-size: cover;
   margin-left: 5px;
-  /* Espacement entre l'image et le texte du lien */ }
+  /* Espacement entre l'image et le texte du lien */
+  text-decoration: none; }
 
 .nav__header {
   padding-bottom: 36px;
