--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -84,6 +84,8 @@
 
 .nav__el--active{
     border-bottom: 3px var(--color-primary) solid;
+    background-image: url(../images/Animergency-picto-copie.svg);
+    background-size: cover;
 }
 
 .nav__el--inactive{
