--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -52,7 +52,6 @@
     background-image: url('../images/Animergency-picto-copie.svg');
     background-size: cover;
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
-    text-decoration: none;
   }
 
 
@@ -84,8 +83,16 @@
 
 .nav__el--active{
     border-bottom: 3px var(--color-primary) solid;
-    background-image: url(../images/Animergency-picto-copie.svg);
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 16px; /* Largeur de l'image */
+    height: 16px; /* Hauteur de l'image */
+    background-image: url('../images/Animergency-picto-copie.svg');
     background-size: cover;
+    margin-left: 5px; /* Espacement entre l'image et le texte du lien */
 }
 
 .nav__el--inactive{
