--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -48,8 +48,7 @@
   background-image: url("../images/Animergency-picto-copie.svg");
   background-size: cover;
   margin-left: 5px;
-  /* Espacement entre l'image et le texte du lien */
-  text-decoration: none; }
+  /* Espacement entre l'image et le texte du lien */ }
 
 .nav__header {
   padding-bottom: 36px;
@@ -76,8 +75,19 @@
 
 .nav__el--active {
   border-bottom: 3px var(--color-primary) solid;
-  background-image: url(../images/Animergency-picto-copie.svg);
-  background-size: cover; }
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 16px;
+  /* Largeur de l'image */
+  height: 16px;
+  /* Hauteur de l'image */
+  background-image: url("../images/Animergency-picto-copie.svg");
+  background-size: cover;
+  margin-left: 5px;
+  /* Espacement entre l'image et le texte du lien */ }
 
 .nav__el--inactive {
   border-bottom: 3px var(--color-bg) solid; }
