--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -54,6 +54,13 @@
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
   }
 
+.header__link.active::after{
+    width: 16px; /* Largeur de l'image */
+    height: 16px; /* Hauteur de l'image */
+    background-image: url('../images/Animergency-picto-copie.svg');
+    margin-left: 5px; /* Espacement entre l'image et le texte du lien */
+}
+
 
 .nav__header{
     padding-bottom: 36px;
@@ -83,10 +90,6 @@
 
 .nav__el--active{
     border-bottom: 3px var(--color-primary) solid;
-    width: 16px; /* Largeur de l'image */
-    height: 16px; /* Hauteur de l'image */
-    background-image: url('../images/Animergency-picto-copie.svg');
-    margin-left: 5px; /* Espacement entre l'image et le texte du lien */
 }
 
 .nav__el--inactive{
