--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -50,6 +50,15 @@
   margin-left: 5px;
   /* Espacement entre l'image et le texte du lien */ }
 
+.header__link.active::after {
+  width: 16px;
+  /* Largeur de l'image */
+  height: 16px;
+  /* Hauteur de l'image */
+  background-image: url("../images/Animergency-picto-copie.svg");
+  margin-left: 5px;
+  /* Espacement entre l'image et le texte du lien */ }
+
 .nav__header {
   padding-bottom: 36px;
   transform: translateX(0%);
@@ -74,14 +83,7 @@
   margin-top: 18px; }
 
 .nav__el--active {
-  border-bottom: 3px var(--color-primary) solid;
-  width: 16px;
-  /* Largeur de l'image */
-  height: 16px;
-  /* Hauteur de l'image */
-  background-image: url("../images/Animergency-picto-copie.svg");
-  margin-left: 5px;
-  /* Espacement entre l'image et le texte du lien */ }
+  border-bottom: 3px var(--color-primary) solid; }
 
 .nav__el--inactive {
   border-bottom: 3px var(--color-bg) solid; }
