--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -51,13 +51,7 @@
   /* Espacement entre l'image et le texte du lien */ }
 
 .header__link.active::after {
-  width: 16px;
-  /* Largeur de l'image */
-  height: 16px;
-  /* Hauteur de l'image */
-  background-image: url("../images/Animergency-picto-copie.svg");
-  margin-left: 5px;
-  /* Espacement entre l'image et le texte du lien */ }
+  content: url(../images/Animergency-picto-copie.svg); }
 
 .nav__header {
   padding-bottom: 36px;
