--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -54,8 +54,17 @@
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
   }
 
-.header__link.active::after{
-    content: url(../images/Animergency-picto-copie.svg);
+.header__link--active{
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 16px; /* Largeur de l'image */
+    height: 16px; /* Hauteur de l'image */
+    background-image: url('../images/Animergency-picto-copie.svg');
+    background-size: cover;
+    margin-left: 5px; /* Espacement entre l'image et le texte du lien */
 }
 
 
