--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -50,9 +50,11 @@
   margin-left: 5px;
   /* Espacement entre l'image et le texte du lien */ }
 
-.header__link--active {
+.header__link:active::after {
   content: "";
   position: absolute;
+  top: 50%;
+  right: 0;
   transform: translateY(-50%);
   width: 16px;
   /* Largeur de l'image */
