--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -54,18 +54,6 @@
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
   }
 
-.header__link:active{
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    width: 16px; /* Largeur de l'image */
-    height: 16px; /* Hauteur de l'image */
-    background-image: url('../images/Animergency-picto-copie.svg');
-    background-size: cover;
-    margin-left: 5px; /* Espacement entre l'image et le texte du lien */
-}
-
 
 .nav__header{
     padding-bottom: 36px;
@@ -95,6 +83,7 @@
 
 .nav__el--active{
     border-bottom: 3px var(--color-primary) solid;
+    color: var(--color-primary);
 }
 
 .nav__el--inactive{
