--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -50,20 +50,6 @@
   margin-left: 5px;
   /* Espacement entre l'image et le texte du lien */ }
 
-.header__link:active {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  width: 16px;
-  /* Largeur de l'image */
-  height: 16px;
-  /* Hauteur de l'image */
-  background-image: url("../images/Animergency-picto-copie.svg");
-  background-size: cover;
-  margin-left: 5px;
-  /* Espacement entre l'image et le texte du lien */ }
-
 .nav__header {
   padding-bottom: 36px;
   transform: translateX(0%);
@@ -88,7 +74,8 @@
   margin-top: 18px; }
 
 .nav__el--active {
-  border-bottom: 3px var(--color-primary) solid; }
+  border-bottom: 3px var(--color-primary) solid;
+  color: var(--color-primary); }
 
 .nav__el--inactive {
   border-bottom: 3px var(--color-bg) solid; }
