--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -29,7 +29,7 @@
     background-color: transparent;
     z-index: 1;
     fill: var(--color-primary);
-    
+    cursor: pointer;
 	overflow: hidden;
     position: relative;
 }
