--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -26,6 +26,7 @@
   background-color: transparent;
   z-index: 1;
   fill: var(--color-primary);
+  cursor: pointer;
   overflow: hidden;
   position: relative; }
 
