--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -12,7 +12,10 @@
   align-items: center; }
 
 .header__menu--logo {
-  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
   cursor: pointer; }
 
 .header__menu--burger {
