--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -14,7 +14,10 @@
 }
 
 .header__menu--logo{
-    width: 60px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    width: 50px;
     cursor: pointer;
 }
 
