--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -59,6 +59,7 @@
 
 
 .nav__header{
+    background-color: aqua;
     padding-bottom: 36px;
     transform: translateX(0%);
     transition: transform 0.2s ease-out;
@@ -105,7 +106,7 @@
 }
 
 .header--display{
-    transform: translateX(-150%);
+    transform: translateX(-100%);
     transition: transform 0.2s ease-in;
     margin-bottom: -200px;
 }
