--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -55,6 +55,7 @@
   /* Espacement entre l'image et le texte du lien */ }
 
 .nav__header {
+  background-color: aqua;
   padding-bottom: 36px;
   transform: translateX(0%);
   transition: transform 0.2s ease-out;
@@ -94,7 +95,7 @@
   text-indent: 100%; }
 
 .header--display {
-  transform: translateX(-150%);
+  transform: translateX(-100%);
   transition: transform 0.2s ease-in;
   margin-bottom: -200px; }
 
