--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -59,7 +59,6 @@
 
 
 .nav__header{
-    background-color: aqua;
     padding-bottom: 36px;
     transform: translateX(0%);
     transition: transform 0.2s ease-out;
@@ -71,7 +70,7 @@
     right: 0px;
     height: 92vh;
     top: 10vh;
-    background-color: var(--color-bg);
+    background-color: var(--color-primary);
     width: 70%;
 }
 
