--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -67,7 +67,7 @@
     align-items: center;
 
     position: fixed;
-    right: 0px;
+    left: 0px;
     height: 92vh;
     top: 10vh;
     background-color: var(--color-primary);
