--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -62,7 +62,7 @@
   flex-direction: column;
   align-items: center;
   position: fixed;
-  right: 0px;
+  left: 0px;
   height: 92vh;
   top: 10vh;
   background-color: var(--color-primary);
