--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -34,7 +34,7 @@
   position: relative; }
 
 .header__link {
-  color: var(--color-text);
+  color: var(--color-bg);
   text-decoration: none;
   position: relative;
   padding-right: 20px; }
@@ -49,7 +49,7 @@
   /* Largeur de l'image */
   height: 16px;
   /* Hauteur de l'image */
-  background-image: url("../images/Animergency-picto-copie.svg");
+  background-image: url("../images/Animergency-picto-copie-blanc.svg");
   background-size: cover;
   margin-left: 5px;
   /* Espacement entre l'image et le texte du lien */ }
