--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -38,7 +38,7 @@
 }
 
 .header__link{
-    color: var(--color-text);
+    color: var(--color-bg);
     text-decoration: none;
     position: relative;
     padding-right: 20px;
@@ -52,7 +52,7 @@
     transform: translateY(-50%);
     width: 16px; /* Largeur de l'image */
     height: 16px; /* Hauteur de l'image */
-    background-image: url('../images/Animergency-picto-copie.svg');
+    background-image: url('../images/Animergency-picto-copie-blanc.svg');
     background-size: cover;
     margin-left: 5px; /* Espacement entre l'image et le texte du lien */
   }
