--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -14,9 +14,8 @@
 }
 
 .header__menu--logo{
-    display: flex;
-    justify-content: center; 
-    align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
     width: 50px;
     cursor: pointer;
 }
