--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -14,8 +14,9 @@
 }
 
 .header__menu--logo{
+    position:absolute;
     left: 50%;
-    transform: translateX(-50%);
+  transform: translateX(-50%);
     width: 50px;
     cursor: pointer;
 }
