--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -12,6 +12,7 @@
   align-items: center; }
 
 .header__menu--logo {
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
   width: 50px;
