--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -15,8 +15,9 @@
 
 .header__menu--logo{
     position:absolute;
+    top: 0;
     left: 50%;
-  transform: translateX(-50%);
+    transform: translateX(-50%);
     width: 50px;
     cursor: pointer;
 }
