--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -13,7 +13,7 @@
 
 .header__menu--logo {
   position: absolute;
-  top: 0;
+  top: 45px;
   left: 50%;
   transform: translateX(-50%);
   width: 50px;
