--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -15,7 +15,7 @@
 
 .header__menu--logo{
     position:absolute;
-    top: 45px;
+    top: 10%;
     left: 50%;
     transform: translateX(-50%);
     width: 50px;
