--- a/assets/style/_anim.scss
+++ b/assets/style/_anim.scss
@@ -2,6 +2,8 @@
     position: absolute;
     left: -100%;
     transition: left 0.5s;
+    width: 50%;
+    height: 50%;
   }
 
   .image__content.visible {
