--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -151,7 +151,9 @@
 .image__content {
   position: absolute;
   left: -100%;
-  transition: left 0.5s; }
+  transition: left 0.5s;
+  width: 50%;
+  height: 50%; }
 
 .image__content.visible {
   left: 0; }
