--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -117,6 +117,10 @@
   --color-third: #f37575;
   --color-fourth: #a69580; }
 
+.image__content {
+  width: 80%;
+  margin-top: 10%; }
+
 /* css grid*/
 .mgrid-start01 {
   grid-column-start: 1; }
