--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -19,3 +19,14 @@
     width: 80%;
     margin-top: 10%;
 }
+
+.image-container {
+    position: relative;
+  }
+  
+  .image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
