--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -15,10 +15,6 @@
     --color-fourth: #a69580;
 }
 
-.image__content{
-    width: 80%;
-    margin-top: 10%;
-}
 
 .image-container {
     position: relative;
@@ -30,3 +26,13 @@
     left: 0;
     z-index: 1;
   }
+
+.image__content{
+    width: 80%;
+    margin-top: 10%;
+}
+
+.image__content1{
+    width: 50%;
+    height: 50%;
+}
