--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,8 @@
 /* Burger menu*/
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap");
 .header {
   max-width: 980px;
   margin: auto; }
@@ -131,6 +133,14 @@
   z-index: 1; }
 
 /* css grid*/
+.content {
+  padding: 18px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-column-gap: 18px;
+  max-width: 100ch;
+  margin: auto; }
+
 .mgrid-start01 {
   grid-column-start: 1; }
 
@@ -160,3 +170,23 @@
 
 .mgrid-end {
   grid-column-end: -1; }
+
+.title {
+  font-family: 'Cabin', sans-serif;
+  font-size: 84px;
+  font-weight: 700;
+  line-height: 1.4;
+  color: var(--color-primary);
+  padding-top: 40px; }
+
+.title--big {
+  color: var(--color-primary);
+  font-size: 44pt;
+  font-weight: 700; }
+
+.txt__content {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.5;
+  color: var(--color-text); }
