--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -181,7 +181,7 @@
 
 .title--big {
   color: var(--color-primary);
-  font-size: 44pt;
+  font-size: 84px;
   font-weight: 700; }
 
 .txt__content {
