--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -15,10 +15,6 @@
     --color-fourth: #a69580;
 }
 
-.image__content{
-    width: 80%;
-    margin-top: 10%;
-}
 
 .image-container {
     position: relative;
@@ -31,3 +27,19 @@
     z-index: 1;
   }
 
+
+  .btn-experience {
+    font-family:'Cabin', sans-serif ;
+   text-align: center;
+   background-color: var(--color-primary);
+   margin-top: 40px;
+   padding: 8px 12px; 
+   border-radius: 5px;
+   color: var(--color-bg);
+   text-decoration: none;
+}
+
+.bouton--style :hover{
+    background-color: var(--color-bg);
+    color: var(--color-primary);
+}
