--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -192,7 +192,8 @@
 .title--big {
   color: var(--color-primary);
   font-size: 44px;
-  font-weight: 700; }
+  font-weight: 700;
+  margin: 50px 0; }
 
 .txt__content {
   font-family: 'Quicksand', sans-serif;
@@ -200,4 +201,4 @@
   font-weight: 500;
   line-height: 1.5;
   color: var(--color-text);
-  margin: 10px 0; }
+  margin: 30px 0; }
