--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -15,16 +15,21 @@
     --color-fourth: #a69580;
 }
 
+.image__content{
+    margin-left: 0;
+    width: 80%;
+    height: 50%;
+}
 
   .btn-experience {
-font-family:'Cabin', sans-serif ;
-   text-align: center;
-   background-color: var(--color-primary);
-   margin-top: 40px;
-   padding: 8px 12px; 
-   border-radius: 20px;
-   color: var(--color-bg);
-   text-decoration: none;
+    font-family:'Cabin', sans-serif ;
+    text-align: center;
+    background-color: var(--color-primary);
+    margin-top: 40px;
+    padding: 8px 12px; 
+    border-radius: 20px;
+    color: var(--color-bg);
+    text-decoration: none;
 }
 
 .bouton--style :hover{
