--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -36,3 +36,17 @@
     background-color: var(--color-bg);
     color: var(--color-primary);
 }
+
+#scrollUpButton {
+    display: none; /* Masque le bouton initialement */
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+  }
