--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -138,6 +138,20 @@
   background-color: var(--color-bg);
   color: var(--color-primary); }
 
+#scrollUpButton {
+  display: none;
+  /* Masque le bouton initialement */
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer; }
+
 /* css grid*/
 .content {
   padding: 18px;
