ajout du contenu dans index.html

--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -37,6 +37,10 @@
     color: var(--color-primary);
 }
 
+.motivation{
+    background-color: var(--color-secondary);
+}
+
 #scrollUpButton {
     display: none; /* Masque le bouton initialement */
     position: fixed;
