--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -41,6 +41,14 @@
     background-color: var(--color-secondary);
 }
 
+.solutions{
+    background-color: var(--color-fourth);
+}
+
+.presentation{
+    background-color: var(--color-third);
+}
+
 #scrollUpButton {
     display: none; /* Masque le bouton initialement */
     position: fixed;
