ajout du contenu dans index.html

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -117,7 +117,7 @@
   --color-primary: #9c3127;
   --color-secondary: #2d4473;
   --color-third: #f37575;
-  --color-fourth: #a69580; }
+  --color-fourth: #F2D6B3; }
 
 .image__content {
   padding-left: 0;
