--- a/assets/style/_text.scss
+++ b/assets/style/_text.scss
@@ -17,6 +17,19 @@
 
 }
 
+.title--medium{
+    color: var(--color-text);
+    font-size: 36px;
+    padding-top: 30px;
+    margin-top: 40px;
+}
+
+.title--small{
+    color: var(--color-text);
+    font-size: 26px;
+    padding-top: 30px;
+}
+
 .txt__content{
     font-family: 'Quicksand', sans-serif;
     font-size: 14px;
