--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -147,9 +147,14 @@
 .presentation {
   background-color: var(--color-third); }
 
+.section-link {
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  color: var(--color-text); }
+
+/* scroll up bouton */
 #scrollUpButton {
   display: none;
-  /* Masque le bouton initialement */
   position: fixed;
   bottom: 20px;
   right: 20px;
