ajout du contenu dans index.html

--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -43,6 +43,7 @@
     text-decoration: none;
     position: relative;
     padding-right: 20px;
+    font-family: 'Cabin', sans-serif;
 }
 
 .header__link:hover::before {
