ajout du contenu dans index.html

--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -80,11 +80,6 @@
     text-align: center;
 }
 
-.footer__el--img{
-    width: 100px;
-    margin: auto;
-}
-
 .footer__link{
     color: var(--color-bg);
     text-decoration: none;
@@ -117,7 +112,7 @@
 
 .footer__el--img{
     width: 100px;
-    margin: auto;
+    margin: 20px auto;
 }
 
 .reseaux__list{
