--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -160,8 +160,7 @@
   bottom: 20px;
   right: 20px;
   z-index: 9999;
-  background-color: #fff;
-  color: #fff;
+  background-image: url(../images/Animergency-picto-copie.svg);
   border: none;
   border-radius: 50%;
   padding: 10px;
