--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -64,6 +64,7 @@
     right: 20px;
     z-index: 9999;
     background-image: url(../images/Animergency-picto-copie.svg);
+    background-repeat: no-repeat;
     border: none;
     border-radius: 50%;
     padding: 10px;
