ajout du contenu dans index.html

--- a/assets/style/_text.scss
+++ b/assets/style/_text.scss
@@ -38,6 +38,10 @@
     margin: 30px 0;
 }
 
+.title--color{
+    color: var(--color-bg);
+}
+
 .txt__content--color{
     color: var(--color-bg);
 }
