--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -315,5 +315,8 @@
   color: var(--color-text);
   margin: 30px 0; }
 
+.title--color {
+  color: var(--color-bg); }
+
 .txt__content--color {
   color: var(--color-bg); }
