ajout du contenu dans index.html

--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -53,6 +53,7 @@
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     color: var(--color-text);
+    margin: 40px 0;
 }
 
 /* scroll up bouton */
