--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -151,7 +151,8 @@
 .section-link {
   font-family: 'Quicksand', sans-serif;
   text-align: center;
-  color: var(--color-text); }
+  color: var(--color-text);
+  margin: 40px 0; }
 
 /* scroll up bouton */
 #scrollUpButton {
