--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -143,7 +143,7 @@
   background-color: var(--color-secondary); }
 
 .solutions {
-  background-color: var(--color-fourth); }
+  background-color: var(--color-primary); }
 
 .presentation {
   background-color: var(--color-third); }
