--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -321,3 +321,44 @@
 
 .txt__content--color {
   color: var(--color-bg); }
+
+.image__content {
+  position: absolute;
+  left: -100%;
+  transition: left 0.5s;
+  width: 80%;
+  height: 70%; }
+
+.image__content.visible {
+  left: 0; }
+
+/* slider */
+.slider-container {
+  width: 100%;
+  overflow: hidden; }
+
+.slider {
+  display: flex;
+  transition: transform 0.3s ease; }
+
+.slide {
+  flex: 0 0 100%;
+  padding: 20px;
+  text-align: center; }
+
+.slide-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%; }
+
+.icon {
+  font-size: 24px; }
+
+h3 {
+  margin: 10px 0; }
+
+img {
+  max-width: 100%;
+  height: auto; }
