--- a/assets/style/_anim.scss
+++ b/assets/style/_anim.scss
@@ -1,51 +1,46 @@
-.image__content{
-    position: absolute;
-    left: -100%;
-    transition: left 0.5s;
-    width: 80%;
-    height: 70%;
-  }
 
-  .image__content.visible {
-    left: 0;
-  }
+/* slider */
 
-  /* slider */ 
+@media screen and (min-width: 768px) {
 
-  .slider-container {
-    width: 100%;
+ .slider__container{
     overflow: hidden;
   }
-  
-  .slider {
+
+ .slider {
     display: flex;
-    transition: transform 0.3s ease;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
   }
   
   .slide {
     flex: 0 0 100%;
-    padding: 20px;
-    text-align: center;
+    scroll-snap-align: start;
+    position: relative;
+  }
+  
+  .slide img {
+    width: 40%;
+    height: auto;
   }
   
   .slide-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    text-align: center;
   }
   
-  .icon {
-    font-size: 24px;
+  .slide-content img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
   }
   
-  h3 {
-    margin: 10px 0;
+  .slide-content details {
+    margin-top: 10px;
   }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+
+}
   
