--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -15,11 +15,27 @@
     --color-fourth: #F2D6B3;
 }
 
+.main{
+    margin-top: 70px;
+}
+
+.image__intro{
+    width: 125%;
+    height: auto;
+    position: relative;
+    left: 0;
+    transition: left 0.3s ease-out;
+}
+
+
+
 .image__content{
-    padding-left: 0;
-    width: 80%;
+    margin: 20px 0;
+    width: 100%;
     height: auto;
 }
+
+
 
   .btn-experience {
     font-family:'Cabin', sans-serif ;
@@ -41,35 +57,57 @@
     background-color: var(--color-secondary);
 }
 
-.solutions{
-    background-color: var(--color-primary);
+.more{
+    background-color: #2d4473;
+    color: var(--color-bg);
+    margin: 10px 0;
+    border-radius: 20px;
+    padding: 18px;
+    cursor: pointer;
 }
 
-.presentation{
-    background-color: var(--color-third);
+.supersoluce{
+    background-color: var(--color-fourth);
 }
 
-.section-link{
-    font-family: 'Quicksand', sans-serif;
-    text-align: center;
-    color: var(--color-text);
-    margin: 40px 0;
+
+.icone{
+    width: 130%;
+    height: auto;
 }
+
+.img__slide{
+    width: 80%;
+    height: auto;
+    margin: 30px 0;
+}
+
+.motivation{
+    padding: 0;
+}
+
 
 /* scroll up bouton */
 
-#scrollUpButton {
-    display: none;
+.scroll-up-button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 9999;
-    background-image: url(../images/Animergency-picto-copie.svg);
-    border: none;
+    width: 60px;
+    height: 60px;
+    background-color: #CECCCC;
     border-radius: 50%;
-    padding: 10px;
+    border: none;
     cursor: pointer;
+    z-index: 9999;
+    opacity: 70%;
   }
+  
+  .scroll-up-button img {
+    width: 100%;
+    height: auto;
+  }
+  
 
 /* footer */
 
