--- a/assets/style/_grid.scss
+++ b/assets/style/_grid.scss
@@ -9,6 +9,14 @@
     margin: auto;
 }
 
+.souscontent{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 18px;
+    max-width: 100ch;
+    margin: auto;
+}
+
 .mgrid-start01{
     grid-column-start: 1;
 }
@@ -40,3 +48,12 @@
 .mgrid-end{
     grid-column-end: -1;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    
+
+  }
+
+  @media screen and (min-width: 1025px) {
+    /* Styles spécifiques aux écrans de bureau */
+  } 
