--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -7,6 +7,12 @@
 
 
 .header__menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    background-color: var(--color-bg);
     display: flex;
     justify-content: space-between;
     padding: 18px;
@@ -31,7 +37,7 @@
     background-image: url(../images/menu-burger.svg);
     background-size: cover;
     background-color: transparent;
-    z-index: 1;
+    z-index: 9999;
     fill: var(--color-primary);
     cursor: pointer;
 	overflow: hidden;
@@ -67,9 +73,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 9999;
 
     position: fixed;
-    left: 0px;
+    left: 0;
     height: 92vh;
     top: 10vh;
     background-color: var(--color-primary);
