--- a/assets/style/_text.scss
+++ b/assets/style/_text.scss
@@ -3,7 +3,6 @@
 
 .title{
     font-family: 'Cabin', sans-serif;
-    font-size: 84px;
     font-weight: 700;
     line-height: 1.4;
     color: var(--color-primary);
@@ -13,12 +12,12 @@
     color: var(--color-primary);
     font-size: 44px;
     font-weight: 700;
-    margin: 50px 0;
+    margin: 40px 0;
 
 }
 
 .title--medium{
-    color: var(--color-text);
+    color: var(--color-secondary);
     font-size: 36px;
     margin-top: 40px;
 }
@@ -29,6 +28,14 @@
     padding-top: 30px;
 }
 
+.mini--title{
+    color: var(--color-text);
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+    margin: 10px 0;
+    text-align: center;
+}
+
 .txt__content{
     font-family: 'Quicksand', sans-serif;
     font-size: 14px;
@@ -36,6 +43,32 @@
     line-height: 1.5;
     color: var(--color-text);
     margin: 30px 0;
+}
+
+.txt__details{
+    font-family: 'Quicksans', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: var(--color-bg);
+    margin: 30px 0;
+}
+
+.txt__details--color{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 11px;
+    font-weight: 600;
+    color: var(--color-text) ;
+}
+
+.sum__title{
+    font-family: 'Cabin', sans-serif;
+}
+
+.list__details--el{
+    margin: 30px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;   
 }
 
 .title--color{
