--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -66,7 +66,7 @@
     cursor: pointer;
 }
 
-.supersoluce{
+.solutions{
     background-color: var(--color-fourth);
 }
 
@@ -203,4 +203,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media screen and (min-width: 1025px) {
+
+    .image__content{
+        width: 60%;
+        height: auto;
+        margin: 0;
+    }
+
+    .image__content--logo{
+        width: 30%;
+        height: auto;
+    }
+
+    .rencontres{
+        background-color: var(--color-fourth);
+    }
+
+    .solutions{
+        background-color: var(--color-bg);
+    }
+
 }
