--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -58,11 +58,11 @@
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    width: 16px; /* Largeur de l'image */
-    height: 16px; /* Hauteur de l'image */
+    width: 16px; 
+    height: 16px; 
     background-image: url('../images/Animergency-picto-copie-blanc.svg');
     background-size: cover;
-    margin-left: 5px; /* Espacement entre l'image et le texte du lien */
+    margin-left: 5px; 
   }
 
 
