--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -56,13 +56,10 @@
   right: 0;
   transform: translateY(-50%);
   width: 16px;
-  /* Largeur de l'image */
   height: 16px;
-  /* Hauteur de l'image */
   background-image: url("../images/Animergency-picto-copie-blanc.svg");
   background-size: cover;
-  margin-left: 5px;
-  /* Espacement entre l'image et le texte du lien */ }
+  margin-left: 5px; }
 
 .nav__header {
   padding-bottom: 36px;
@@ -167,7 +164,7 @@
   padding: 18px;
   cursor: pointer; }
 
-.supersoluce {
+.solutions {
   background-color: var(--color-fourth); }
 
 .icone {
@@ -279,6 +276,19 @@
   flex-direction: column;
   align-items: center; }
 
+@media screen and (min-width: 1025px) {
+  .image__content {
+    width: 60%;
+    height: auto;
+    margin: 0; }
+  .image__content--logo {
+    width: 30%;
+    height: auto; }
+  .rencontres {
+    background-color: var(--color-fourth); }
+  .solutions {
+    background-color: var(--color-bg); } }
+
 /* css grid*/
 .content {
   padding: 18px;
@@ -324,6 +334,61 @@
 
 .mgrid-end {
   grid-column-end: -1; }
+
+@media screen and (min-width: 1025px) {
+  .main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); }
+  .introduction {
+    grid-column: span 2;
+    padding: 0; }
+  .motivation {
+    grid-column: span 2;
+    margin-top: 0; }
+  .rencontres {
+    grid-column: span 2; }
+  .solutions {
+    grid-column: span 2;
+    margin-top: 0; }
+  .modules {
+    grid-column: 1 / -1; }
+  .presentation {
+    grid-column: span 2; }
+  .conclusion {
+    grid-column: span 2; }
+  .content {
+    grid-template-columns: repeat(7, 1fr);
+    grid-column-gap: 20px;
+    max-width: 1300px;
+    margin-bottom: 100px; }
+  .grid-start01 {
+    grid-column-start: 1; }
+  .grid-start02 {
+    grid-column-start: 2; }
+  .grid-start03 {
+    grid-column-start: 3; }
+  .grid-start04 {
+    grid-column-start: 4; }
+  .grid-start05 {
+    grid-column-start: 5; }
+  .grid-start06 {
+    grid-column-start: 6; }
+  .grid-start07 {
+    grid-column-start: 7; }
+  .grid-end02 {
+    grid-column-end: 2; }
+  .grid-end03 {
+    grid-column-end: 3; }
+  .grid-end04 {
+    grid-column-end: 4; }
+  .grid-end05 {
+    grid-column-end: 5; }
+  .grid-end06 {
+    grid-column-end: 6; }
+  .grid-end {
+    grid-column-end: -1; }
+  .souscontent {
+    margin: auto; } }
 
 .title {
   font-family: 'Cabin', sans-serif;
@@ -390,8 +455,58 @@
 .txt__content--color {
   color: var(--color-bg); }
 
+@media screen and (min-width: 1025px) {
+  .title--big {
+    color: var(--color-primary);
+    font-size: 44px;
+    font-weight: 700;
+    margin: 40px 0; }
+  .title--medium {
+    color: var(--color-secondary);
+    font-size: 36px;
+    margin-top: 40px; }
+  .title--small {
+    color: var(--color-text);
+    font-size: 26px;
+    padding-top: 30px; }
+  .mini--title {
+    color: var(--color-text);
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+    margin: 10px 0;
+    text-align: center; }
+  .txt__content {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: var(--color-text);
+    margin: 30px 0; }
+  .txt__details {
+    font-family: 'Quicksans', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: var(--color-bg);
+    margin: 30px 0; }
+  .txt__details--color {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 11px;
+    font-weight: 600;
+    color: var(--color-text); }
+  .sum__title {
+    font-family: 'Cabin', sans-serif; }
+  .list__details--el {
+    margin: 30px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px; }
+  .title--color {
+    color: var(--color-bg); }
+  .txt__content--color {
+    color: var(--color-bg); } }
+
 /* slider */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1025px) {
   .slider__container {
     overflow: hidden; }
   .slider {
