--- a/assets/style/_grid.scss
+++ b/assets/style/_grid.scss
@@ -14,7 +14,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-column-gap: 18px;
     max-width: 100ch;
-    margin: auto;
+    margin: 20px;
 }
 
 .mgrid-start01{
@@ -49,102 +49,17 @@
     grid-column-end: -1;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    
 
+@media screen and (min-width: 768px) {
+    .content {
+      grid-template-columns: repeat(7, 1fr);
+      width: 100vh;
+    }
   }
-
-@media screen and (min-width: 1025px) {
-
-
-    .main{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr); 
+  
+  @media screen and (min-width: 1024px) {
+    .content {
+      grid-template-columns: repeat(10, 1fr); 
+      width: 100vh;
     }
-
-
-    .introduction{
-        grid-column: span 2;
-        padding: 0;
-    }
-
-    .motivation{
-        grid-column: span 2;
-        margin-top: 0;
-    }
-
-    .rencontres{
-        grid-column: span 2;
-    }
-
-    .solutions{
-        grid-column: span 2;
-        margin-top: 0;
-    }
-
-    .modules{
-        grid-column: 1 / -1;
-    }
-
-    .presentation{
-        grid-column: span 2;
-    }
-
-    .conclusion{
-        grid-column: span 2;
-    }
-    
-    .content{
-        grid-template-columns: repeat(7, 1fr);
-        grid-column-gap: 20px;
-        max-width: 1300px;
-        margin-bottom: 100px;
-    }
-
-    .grid-start01{
-        grid-column-start: 1;
-    }
-    .grid-start02{
-        grid-column-start: 2;
-    }
-    .grid-start03{
-        grid-column-start: 3;
-    }
-    .grid-start04{
-        grid-column-start: 4;
-    }
-    .grid-start05{
-        grid-column-start: 5;
-    }
-    .grid-start06{
-        grid-column-start: 6;
-    }
-    .grid-start07{
-        grid-column-start: 7;
-    }
-
-    .grid-end02{
-        grid-column-end: 2;
-    }
-    .grid-end03{
-        grid-column-end: 3;
-    }
-    .grid-end04{
-        grid-column-end: 4;
-    }
-    .grid-end05{
-        grid-column-end: 5;
-    }
-    .grid-end06{
-        grid-column-end: 6;
-    }
-    .grid-end{
-        grid-column-end: -1;
-    }
-
-    .souscontent{
-        margin: auto;
-    }
-
- 
-}
+  }
