--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -19,6 +19,11 @@
     margin-top: 70px;
 }
 
+.introduction{
+    min-height: 90vh;
+    align-items: center;
+}
+
 .image__intro{
     width: 125%;
     height: auto;
