--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -74,16 +74,16 @@
     flex-direction: column;
     align-items: center;
     z-index: 9999;
-
     position: fixed;
     left: 0;
     height: 92vh;
     top: 10vh;
     background-color: var(--color-primary);
-    width: 70%;
+    width: 25vw;
 }
 
 .header__el{
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -93,12 +93,23 @@
     margin-top: 18px;
 }
 
-.nav__el--active{
-    border-bottom: 3px var(--color-bg) solid;
+.active{
+    font-weight: 600;
+    border-bottom: 1px solid #ffffff;
 }
 
-.nav__el--inactive{
-    border-bottom: 3px var(--color-primary) solid;
+.active::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 16px; 
+    height: 16px; 
+    background-image: url('../images/Animergency-picto-copie-blanc.svg');
+    background-size: cover;
+    margin-left: 5px; 
+    
 }
 
 .header__link:hover{
