--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -79,7 +79,7 @@
     height: 92vh;
     top: 10vh;
     background-color: var(--color-primary);
-    width: 25vw;
+    width: 50vw;
 }
 
 .header__el{
@@ -95,7 +95,7 @@
 
 .active{
     font-weight: 600;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 2px solid #ffffff;
 }
 
 .active::before{
@@ -137,3 +137,16 @@
 .header--cross{
     background-image: url(../images/icon-croix.svg);
 }
+
+@media screen and (min-width: 768px) {
+    .content {
+      grid-template-columns: repeat(2, 1fr);
+      width: 100%;
+    }
+  }
+
+@media screen and (min-width: 1024px) {
+    .nav__header{
+      width: 25vw;
+    }
+  }
