--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -150,6 +150,9 @@
 .sectionpadding {
   padding: 18px; }
 
+.custom-cursor {
+  cursor: url(../images/curseur-patte.png), auto; }
+
 .introduction {
   min-height: 90vh;
   align-items: center;
@@ -321,7 +324,8 @@
     font-weight: 600;
     font-size: 18px;
     color: #2d4473;
-    margin: 10px 0; } }
+    margin: 10px 0;
+    cursor: url(../images/curseur-patte.png), auto; } }
 
 /* css grid*/
 .content {
